Removed cascading controllers, fixed plotter auto y to reset y axis

--- a/config/tools/plotter-config.yaml
+++ b/config/tools/plotter-config.yaml
@@ -1,5 +1,6 @@
-zcm-url: "udpm://239.255.76.67:7667?ttl=1"
-#zcm-url: "ipc"
+# zcm-url: "udpm://239.255.76.67:7667?ttl=1"
+zcm-url: "ipc"
+sim-state: true
 
 color:
   lidar: [128, 0, 0]
