--- a/config/gnc/control-config.yaml
+++ b/config/gnc/control-config.yaml
@@ -1,15 +1,15 @@
 # all PID gains are in the format [kp, ki, kd]
 pid-gains:
   pos-ctrl:
-    x: [1, 0, 0]
-    y: [1, 0, 0]
-    z: [1, 0, 0.5]
+    x: [1, 0, 0.5]
+    y: [1, 0, 0.5]
+    z: [0.4, 0, 0.3]
     yaw: [1, 0, 0]
   rate-ctrl:
-    x: [0.3, 0.0004, 0.05]
-    y: [0.3, 0.0004, 0.05]
-    z: [0.5, 0.0004, 0.008]
-    ems-z: [0.1, 0, -0.05]
+    x: [0, 0, 0]
+    y: [0, 0, 0]
+    z: [0, 0, 0]
+    ems-z: [0, 0, 0]
 
 # rate saturation limits for each position controller are in the format of [upper, lower]
 limits:
@@ -25,6 +25,7 @@ limits:
   angle: # limits are in degrees
     roll: [10, -10]
     pitch: [10, -10]
+  thrust: [1, 0]
   
 # vehicle params that won't be tuned
 tol: 0.1 # convergence tolerance (norm of [x, y, z, yaw])
@@ -32,10 +33,10 @@ uart-path: "/dev/ttyACM1"
 sim: true        #true - control sim over udp, false - control pixhawk through usb
 sim-state: true  #true - state comes from sim, false - state comes from kalman filter
 takeoff-alt: 0.5 #meters
-ff-thrust: 0.563787
+ff-thrust: 0.66
 
 # ZCM publish url
 zcm-url: "ipc"
-# command-zcm-url: "ipc"
+command-zcm-url: "ipc"
 # zcm-url: "udpm://239.255.76.67:7667?ttl=1"
-command-zcm-url: "udpm://239.255.76.67:7667?ttl=1"
+# command-zcm-url: "udpm://239.255.76.67:7667?ttl=1"
