--- a/src/vision/CMakeLists.txt
+++ b/src/vision/CMakeLists.txt
@@ -1,5 +1,6 @@
 if(NOT BUILD_VISION)
     return()
 endif()
-add_subdirectory(depth-utils)
+add_subdirectory(core)
 add_subdirectory(aard)
+add_subdirectory(depth-utils)
