--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ include_directories(
 
 add_subdirectory(common)
 add_subdirectory(gcs-client)
+add_subdirectory(gcs)
 add_subdirectory(gnc)
 add_subdirectory(lidar)
 add_subdirectory(obstacles)
