Move magnetometer calibration function
Now lives in its own file and in the maav::gnc namespace for easier referencing across the code base

--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -125,6 +125,7 @@ target_link_libraries(maav-imu
         ${ZCM_LIBRARIES} 
         maav-msg
         maav-utils
+        maav-gnc-utils
         ${YAMLCPP_LIBRARY}
         maav-imu-device
 )
