Started migrating sim to software directory

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ CameraTrajectory.txt
 KeyFrameTrajectory.txt
 debug_*.pnm
 debug_*.ps
+
+sim/etc
+sim/posix-configs
+sim/ROMFS
+sim/rootfs
+sim/test_data
