Fix maav-camera CameraDriverHelper creation to not create disabled camera interfaces. Fix librealsense install script to correctly patch kernel modules. Make t265 work in camera driver despite major bug in realsense and document the existence of the bug for when intel fixes it.

--- a/src/vision/core/CMakeLists.txt
+++ b/src/vision/core/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(OpenCV REQUIRED)
 find_package(LibRealSense REQUIRED)
 find_package(LibRealSense2 REQUIRED)
 find_package(ZCM REQUIRED)
+find_package(libusb-1.0 REQUIRED)
 
 list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
 
@@ -51,7 +52,9 @@ target_link_libraries(CameraInterface
     ${PCL_LIBRARIES}
     ${LIBREALSENSE_LIBRARIES}
     ${LIBREALSENSE2_LIBRARIES}
+    ${LIBUSB_1_LIBRARIES}
     RealsenseSettings
+    m
 )
 
 target_link_libraries(CameraInterface realsense2)
