--- a/config/camera-config.yaml
+++ b/config/camera-config.yaml
@@ -5,16 +5,20 @@
 # Green: 817512071338
 # Purple: 819112072448
 # Orange: 819112070694
+#
+# T265 Serial Numbers
+# 845412110102
 
 forward:
   enabled: true
   width: 640
   height: 480
   fps: 15                # 15, 30, or 60
-  serial: "819112072448" # 12 digit number on bottom of realsense camera
+  serial: "817512071338" # 12 digit number on bottom of realsense camera
   publish_rgbd: true
   publish_pointcloud: false
   enable_autoexposure: false
+  publish_pose: false # tracking camera only
 
 downward:
   enabled: false
@@ -25,3 +29,15 @@ downward:
   publish_rgbd: false
   publish_pointcloud: true
   enable_autoexposure: false
+  publish_pose: false # tracking camera only
+
+other-forward: # To accomodate the t265 in use with the other cameras
+  enabled: false
+  width: 640
+  height: 480
+  fps: 30                # 15, 30, or 60
+  serial: "845412110102" # 12 digit number on bottom of realsense camera
+  publish_rgbd: false
+  publish_pointcloud: false
+  enable_autoexposure: true
+  publish_pose: true # tracking camera only
