Updated deploy script to work with newer changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,9 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
 add_subdirectory(src)
 add_subdirectory(thirdparty)
 add_subdirectory(drivers)
-add_subdirectory(sim)
+if(BUILD_SIM)
+    add_subdirectory(sim)
+endif()
 if(BUILD_PLOTTER AND BUILD_VISUALIZER)
     add_subdirectory(tools)
 endif()
