Updated .gitmodules and added install script for octomap
.gitmodules: Added branch keyword to entry for octomap to be the master branch.

scripts/install/install-octomap.sh: Added installation script to build
octomap and install to /usr/local using the default cmake install target.

--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,11 @@ compile_commands.json
 *.vscode
 *.idea
 thirdparty/opencv
+thirdparty/octomap
 thirdparty/apriltags
 thirdparty/Qt5
 thirdparty/octomap
+thirdparty/keras*
 .syntastic_cpp_config
 CameraTrajectory.txt
 KeyFrameTrajectory.txt
