--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -3,6 +3,7 @@ find_package(PCL 1.7 REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(LibRealSense2 REQUIRED)
 find_package(Eigen3 REQUIRED)
+find_package(Octomap REQUIRED)
 
 list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
 
@@ -16,6 +17,7 @@ include_directories(
 include_directories(
     SYSTEM
     ${PCL_INCLUDE_DIRS}
+    ${Octomap_INCLUDE_DIRS}
 )
 
 link_directories(${PCL_LIBRARY_DIRS})
@@ -31,8 +33,11 @@ target_link_libraries(maav-planner
         maav-measurements
         ${YAMLCPP_LIBRARY}
         ${ZCM_LIBRARIES}
+        ${Octomap_LIBRARIES}
         maav-utils
         maav-msg
+        VisionUtils
+        maav-path-planner
 )
 
 add_executable(maav-controller maav-controller.cpp)
@@ -59,6 +64,19 @@ target_link_libraries(maav-estimator
         maav-utils
         maav-msg
 )
+
+# 
+# add_executable(maav-localizer maav-localizer.cpp)
+
+# target_link_libraries(maav-localizer
+#         maav-slam
+#         maav-state
+#         maav-gnc-utils
+#         maav-measurements
+#         ${ZCM_LIBRARIES}
+#         maav-utils
+#         maav-msg
+# )
 
 add_executable(maav-control-input maav-control-input.cpp)
 
@@ -159,4 +177,31 @@ if(BUILD_VISION)
         CameraDriverHelper
     )
 
+endif()
+
+if(BUILD_GNC)
+    if (BUILD_VISION)
+        add_executable(maav-octomap maav-octomap.cpp)
+
+        target_link_libraries(maav-octomap
+            maav-msg
+            maav-utils
+            maav-mapping
+            maav-point-mapper
+            VisionUtils
+            ${YAMLCPP_LIBRARY}
+            ${Octomap_LIBRARIES}
+            ${ZCM_LIBRARIES})
+    endif()
+endif()
+
+
+if(BUILD_GNC)
+    add_executable(maav-state-forward maav-state-forward.cpp)
+
+    target_link_libraries(maav-state-forward
+        maav-msg
+        maav-utils
+        VisionUtils
+        ${ZCM_LIBRARIES})
 endif()
