--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,2 +1,9 @@
-add_subdirectory(plotter)
-add_subdirectory(localization_viz)
+if (BUILD_PLOTTER AND BUILD_VISUALIZER)
+    add_subdirectory(plotter)
+    add_subdirectory(localization_viz)
+endif()
+
+if (BUILD_GNC AND BUILD_VISION)
+    add_subdirectory(octomap)
+    add_subdirectory(octomap_viz)
+endif()
