--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,8 @@
 [submodule "thirdparty/mavlink"]
 	path = thirdparty/mavlink
 	url = https://github.com/mavlink/mavlink.git
+	ignore=dirty
 [submodule "thirdparty/Firmware"]
 	path = thirdparty/Firmware
 	url = https://github.com/PX4/Firmware.git
+	ignore=dirty
