--- a/config/tools/visualizer-config.yaml
+++ b/config/tools/visualizer-config.yaml
@@ -1,5 +1,5 @@
-zcm_url: "udpm://239.255.76.67:7667?ttl=1"
-# zcm_url: "ipc"
+#zcm_url: "udpm://239.255.76.67:7667?ttl=1"
+zcm_url: "ipc"
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
